Update 1. Introduction to JavaScript - ES5 vs ES6, Output Methods, and Variables.md

--- a/1. Introduction to JavaScript - ES5 vs ES6, Output Methods, and Variables.md
+++ b/1. Introduction to JavaScript - ES5 vs ES6, Output Methods, and Variables.md
@@ -18,6 +18,20 @@ In this task, you will apply the key concepts of **JavaScript ES5 and ES6**, **o
      - **`alert()`**: Show an alert message with the output.
      - **`innerHTML`**: Change the content of an HTML element dynamically with JavaScript.
    - Create simple code snippets for each method that outputs a message or result.
+  
+# Difference Between `var`, `let`, and `const` in ES5 and ES6
+
+| **Feature**        | **`var` (ES5)**                        | **`let` (ES6)**                     | **`const` (ES6)**                  |
+|---------------------|----------------------------------------|--------------------------------------|-------------------------------------|
+| **Declaration**     | `var x = 10;`                         | `let x = 10;`                       | `const x = 10;`                    |
+| **Scope**           | Function scope                        | Block scope                         | Block scope                        |
+| **Re-declaration**  | Allowed within the same scope          | Not allowed within the same scope   | Not allowed                        |
+| **Re-assignment**   | Allowed                               | Allowed                             | Not allowed                        |
+| **Hoisting**        | Variables are hoisted but initialized as `undefined`. | Variables are hoisted but not initialized (temporal dead zone). | Variables are hoisted but not initialized (temporal dead zone). |
+| **Mutability**      | Mutable                               | Mutable                             | Immutable                          |
+| **Use Case**        | Suitable for globally scoped variables or older code. | Best for variables that change within a block or loop. | Best for constants or values that do not change. |
+
+---
 
 3. **Variables, Data Types, and Initialization**:
    - Declare variables of different data types (`string`, `number`, `boolean`, `array`, `object`).
