Update 6. [p-5] - JavaScript Array Functions - Explanation & Practice.md

--- a/6. [p-5] - JavaScript Array Functions - Explanation & Practice.md
+++ b/6. [p-5] - JavaScript Array Functions - Explanation & Practice.md
@@ -13,6 +13,21 @@
 | `every()`   | Checks if all elements match a condition      | `true` / `false`    |
 | `some()`    | Checks if at least one element matches a condition | `true` / `false` |
 
+c
+
+# 📌 JavaScript Array Methods - Syntax Table  
+
+| Method      | Syntax                                      | Description |
+|------------|--------------------------------------------|-------------|
+| `map()`    | `array.map(callbackFunction)`             | Creates a new array by applying a function to each element. |
+| `filter()` | `array.filter(callbackFunction)`          | Returns a new array with elements that pass a condition. |
+| `forEach()`| `array.forEach(callbackFunction)`         | Executes a function for each element (no return). |
+| `indexOf()`| `array.indexOf(value)`                    | Returns the index of the first occurrence of a value, or `-1` if not found. |
+| `findIndex()` | `array.findIndex(callbackFunction)`   | Returns the index of the first element that matches a condition. |
+| `includes()`| `array.includes(value)`                  | Checks if an array contains a value (returns `true` or `false`). |
+| `every()`  | `array.every(callbackFunction)`           | Returns `true` if **all** elements pass a condition. |
+| `some()`   | `array.some(callbackFunction)`            | Returns `true` if **at least one** element passes a condition. |
+
 ---
 
 ## 📝 Practice Tasks  
