Update 6. [p-5] - JavaScript Array Functions - Explanation & Practice.md

--- a/6. [p-5] - JavaScript Array Functions - Explanation & Practice.md
+++ b/6. [p-5] - JavaScript Array Functions - Explanation & Practice.md
@@ -14,7 +14,7 @@
 | `some()`    | Checks if at least one element matches a condition | `true` / `false` |
 
 
-# 📌 JavaScript Array Methods - Syntax Table  
+## 📌 JavaScript Array Methods - Syntax Table  
 
 | Method      | Syntax                                      | Description |
 |------------|--------------------------------------------|-------------|
